--- a/index.html
+++ b/index.html
@@ -3,357 +3,241 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-  <title>TopTrackz</title>
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="TopTrackz" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;700&display=swap">
+  <title>TopTrackz</title>
   <style>
-    * { box-sizing: border-box; }
     html, body {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
+      margin: 0; padding: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: linear-gradient(180deg, #0e0e0e, #1e1e1e);
       color: white;
+      height: 100vh; width: 100vw;
       overflow: hidden;
     }
-    .screen {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      display: none;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 40px 20px;
-    }
-    .active {
-      display: flex;
-      z-index: 1;
-    }
-    h1, h2, h3 {
-      margin: 20px 0;
-      text-align: center;
-    }
+    .screen { display: none; flex-direction: column; align-items: center; justify-content: center; height: 100vh; padding: 20px; }
+    .active { display: flex; }
+    h1 { font-size: 2rem; margin-bottom: 20px; }
     button {
-      border: none;
-      border-radius: 25px;
+      background-color: #1DB954; color: white;
       padding: 15px 30px;
-      font-size: 1.2rem;
-      font-weight: bold;
-      color: white;
-      width: 80%;
-      max-width: 300px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-      transition: background-color 0.3s, transform 0.1s;
-      margin: 12px 0;
+      border: none; border-radius: 25px;
+      margin: 10px; font-size: 1rem;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
     }
-    .btn-green { background-color: #1DB954; }
-    .btn-red { background-color: #E53935; }
-    .btn-gray { background-color: #2c2c2c; }
-    button:hover { filter: brightness(1.1); }
-    button:active { transform: scale(0.98); }
     input {
-      padding: 12px;
-      width: 80%;
-      max-width: 300px;
-      margin: 8px 0;
-      font-size: 1rem;
-      border-radius: 10px;
-      border: none;
+      padding: 12px; margin: 8px;
+      border-radius: 10px; border: none;
+      background: #2c2c2c; color: white;
       text-align: center;
-      background-color: #2c2c2c;
-      color: white;
     }
+    #debug-token { position: absolute; top: 10px; right: 10px; font-size: 0.75rem; color: #bbb; text-align: right; }
     #spotify-login {
       position: fixed;
       bottom: 20px;
       right: 20px;
-      z-index: 1000;
+      width: 40px;
+      height: 40px;
+      background-image: url('https://upload.wikimedia.org/wikipedia/commons/8/84/Spotify_icon.svg');
+      background-size: cover;
+      background-repeat: no-repeat;
+      border: none;
       cursor: pointer;
-    }
-    #spotify-login img {
-      width: 36px;
-      height: 36px;
-      opacity: 0.8;
-      transition: opacity 0.2s ease;
-    }
-    #spotify-login img:hover {
-      opacity: 1;
-    }
-    #score-icon {
-      position: fixed;
-      top: 20px;
-      left: 20px;
-      font-size: 24px;
-      cursor: pointer;
-    }
-    #score-table {
-      display: none;
-      flex-direction: column;
-      position: fixed;
-      top: 60px;
-      left: 20px;
-      background: #111;
-      border: 1px solid #444;
-      border-radius: 10px;
-      padding: 10px;
-      z-index: 999;
-    }
-    #close-table {
-      text-align: right;
-      cursor: pointer;
-      margin-bottom: 10px;
-    }
-    table {
-      color: white;
-      border-collapse: collapse;
-    }
-    table td, table th {
-      padding: 4px 8px;
     }
   </style>
 </head>
 <body>
-  <!-- Startscreen -->
+  <div id="debug-token">Token: ❌</div>
   <div id="startScreen" class="screen active">
     <h1>TopTrackz</h1>
-    <button class="btn-green" onclick="goTo('modeScreen')">Start</button>
+    <button onclick="goTo('modeScreen')">Start</button>
   </div>
 
-  <!-- Spielmodus Auswahl -->
   <div id="modeScreen" class="screen">
-    <h2>Spielmodus wählen</h2>
-    <button class="btn-green" onclick="startSingleplayer()">Einzelspieler</button>
-    <button class="btn-green" onclick="goTo('multiplayerScreen')">Mehrspieler</button>
+    <h1>Spielmodus wählen</h1>
+    <button onclick="startSingleplayer()">Einzelspieler</button>
+    <button onclick="goTo('multiSetupScreen')">Mehrspieler</button>
   </div>
 
-  <!-- Namenseingabe -->
-  <div id="multiplayerScreen" class="screen">
-    <h2>Spielernamen eingeben</h2>
+  <div id="multiSetupScreen" class="screen">
+    <h1>Spieler eingeben</h1>
     <input id="p1" placeholder="Spieler 1" />
     <input id="p2" placeholder="Spieler 2" />
     <input id="p3" placeholder="Spieler 3" />
     <input id="p4" placeholder="Spieler 4" />
     <input id="p5" placeholder="Spieler 5" />
-    <button class="btn-green" onclick="startMultiplayer()">Starten</button>
+    <button onclick="startMultiplayer()">Spiel starten</button>
   </div>
 
-  <!-- Spielbildschirm -->
   <div id="gameScreen" class="screen">
-    <div id="score-icon" onclick="showScoreTable()">☰</div>
+    <h2 id="roundCounter">Runde 1</h2>
     <h2 id="currentPlayer"></h2>
-    <div id="scoreDisplay"></div>
-    <button class="btn-gray" onclick="playSong()">Abspielen</button>
-    <button class="btn-green" onclick="answer(true)">Erraten</button>
-    <button class="btn-red" onclick="answer(false)">Nicht erraten</button>
+    <div id="currentScore"></div>
+    <button onclick="playRandomSong()">Abspielen</button>
+    <button onclick="guess(true)">Erraten</button>
+    <button style="background-color:#ff4d4d" onclick="guess(false)">Nicht erraten</button>
   </div>
 
-  <!-- Punktetabelle -->
-  <div id="score-table">
-    <div id="close-table" onclick="hideScoreTable()">✖</div>
-    <table id="scoreList"></table>
-  </div>
-
-  <!-- Spotify Login Icon -->
-  <div id="spotify-login" onclick="startSpotifyLogin(event)">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Spotify_logo_without_text.svg" alt="Spotify Login">
-  </div>
-  <div id="debug-box" style="position: fixed; top: 10px; right: 10px; font-size: 10px; color: #aaa; background: #222; padding: 5px 10px; border-radius: 5px;">
-    <div id="debug-token">Token: ❌</div>
-    <div id="debug-device">Device: unbekannt</div>
-  </div>
+  <button id="spotify-login" onclick="loginWithSpotify()"></button>
 
   <script>
-const CLIENT_ID = "9fb9db7417034d34971b1defb719cdc8";
-const REDIRECT_URI = "https://sabine187.github.io/TopTrackz/";
-const SCOPES = "streaming user-read-email user-read-private user-modify-playback-state user-read-playback-state playlist-read-private playlist-read-collaborative";
+    const CLIENT_ID = "9fb9db7417034d34971b1defb719cdc8";
+    const REDIRECT_URI = "https://sabine187.github.io/TopTrackz";
+    const SERVER_URL = "https://spotify-auth-server-d8hj1u1m1-carls-projects-784db7ae.vercel.app/api/token";
 
-async function generateCodeVerifier(length = 128) {
-  const possible = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
-  let text = '';
-  for (let i = 0; i < length; i++) {
-    text += possible.charAt(Math.floor(Math.random() * possible.length));
-  }
-  return text;
-}
+    let codeVerifier;
+    let accessToken = localStorage.getItem("spotify_access_token") || null;
 
-async function generateCodeChallenge(codeVerifier) {
-  const encoder = new TextEncoder();
-  const data = encoder.encode(codeVerifier);
-  const digest = await crypto.subtle.digest('SHA-256', data);
-  return btoa(String.fromCharCode(...new Uint8Array(digest)))
-    .replace(/\+/g, '-')
-    .replace(/\//g, '_')
-    .replace(/=+$/, '');
-}
-
-async function startSpotifyLogin(event) {
-  event.stopPropagation();
-  const codeVerifier = await generateCodeVerifier();
-  const codeChallenge = await generateCodeChallenge(codeVerifier);
-  localStorage.setItem("code_verifier", codeVerifier);
-  const args = new URLSearchParams({
-    response_type: "code",
-    client_id: CLIENT_ID,
-    scope: SCOPES,
-    redirect_uri: REDIRECT_URI,
-    code_challenge_method: "S256",
-    code_challenge: codeChallenge
-  });
-  window.location = `https://accounts.spotify.com/authorize?${args}`;
-}
-
-async function handleRedirect() {
-  const code = new URLSearchParams(window.location.search).get("code");
-  if (!code) {
-    console.log("🔁 Kein Code im Redirect gefunden");
-    return;
-  }
-  console.log("🔁 Code gefunden:", code);
-  const codeVerifier = localStorage.getItem("code_verifier");
-  if (!codeVerifier) {
-    console.error("❌ Kein code_verifier gefunden. PKCE-Flow nicht vollständig.");
-    return;
-  }
-
-  const body = new URLSearchParams({
-    grant_type: "authorization_code",
-    code,
-    redirect_uri: REDIRECT_URI,
-    client_id: CLIENT_ID,
-    code_verifier: codeVerifier
-  });
-
-  try {
-    const res = await fetch("https://accounts.spotify.com/api/token", {
-      method: "POST",
-      headers: { "Content-Type": "application/x-www-form-urlencoded" },
-      body
-    });
-    const data = await res.json();
-    console.log("🎉 Token-Antwort von Spotify:", data);
-
-    if (data.access_token) {
-      localStorage.setItem("spotify_access_token", data.access_token);
-      document.getElementById("debug-token").textContent = "Token: ✅";
-    } else {
-      console.error("❌ Kein access_token erhalten. Antwort:", data);
+    function generateCodeVerifier(length = 128) {
+      let text = "";
+      const possible = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
+      for (let i = 0; i < length; i++) {
+        text += possible.charAt(Math.floor(Math.random() * possible.length));
+      }
+      return text;
     }
-  } catch (err) {
-    console.error("❌ Fehler beim Token-Abruf:", err);
-  }
 
-  // URL bereinigen
-  window.history.replaceState({}, document.title, "/TopTrackz/");
-}
+    async function generateCodeChallenge(codeVerifier) {
+      const data = new TextEncoder().encode(codeVerifier);
+      const digest = await crypto.subtle.digest("SHA-256", data);
+      return btoa(String.fromCharCode(...new Uint8Array(digest)))
+        .replace(/\+/g, "-")
+        .replace(/\//g, "_")
+        .replace(/=+$/, "");
+    }
 
-function goTo(id) {
-  document.querySelectorAll('.screen').forEach(s => s.classList.remove('active'));
-  document.getElementById(id).classList.add('active');
-}
+    async function loginWithSpotify() {
+      codeVerifier = generateCodeVerifier();
+      localStorage.setItem("code_verifier", codeVerifier);
+      const codeChallenge = await generateCodeChallenge(codeVerifier);
+      const state = Math.random().toString(36).substring(2, 15);
 
-let players = [];
-let scores = {};
-let current = 0;
+      const args = new URLSearchParams({
+        response_type: "code",
+        client_id: CLIENT_ID,
+        scope: "user-read-private user-read-email streaming user-read-playback-state user-modify-playback-state",
+        redirect_uri: REDIRECT_URI,
+        state,
+        code_challenge_method: "S256",
+        code_challenge: codeChallenge,
+      });
+      window.location = "https://accounts.spotify.com/authorize?" + args;
+    }
 
-function startSingleplayer() {
-  players = ["Du"];
-  scores = {"Du": 0};
-  current = 0;
-  updateGameScreen();
-  goTo('gameScreen');
-}
+    async function handleRedirect() {
+      const params = new URLSearchParams(window.location.search);
+      const code = params.get("code");
+      const storedVerifier = localStorage.getItem("code_verifier");
 
-function startMultiplayer() {
-  players = [];
-  for (let i = 1; i <= 5; i++) {
-    const val = document.getElementById("p"+i).value.trim();
-    if (val) players.push(val);
-  }
-  if (players.length === 0) return alert("Mindestens ein Spielername ist nötig");
-  players.forEach(p => scores[p] = 0);
-  current = 0;
-  updateGameScreen();
-  goTo('gameScreen');
-}
+      if (code) {
+        const body = {
+          code,
+          code_verifier: storedVerifier,
+          redirect_uri: REDIRECT_URI,
+        };
 
-function answer(correct) {
-  const p = players[current];
-  if (correct) scores[p]++;
-  current = (current + 1) % players.length;
-  updateGameScreen();
-}
-
-function updateGameScreen() {
-  document.getElementById("currentPlayer").textContent = players[current] + " ist dran";
-  document.getElementById("scoreDisplay").textContent = "Punkte: " + scores[players[current]];
-}
-
-function showScoreTable() {
-  const table = document.getElementById("scoreList");
-  table.innerHTML = "<tr><th>Spieler</th><th>Punkte</th></tr>" + players.map(p => `<tr><td>${p}</td><td>${scores[p]}</td></tr>`).join('');
-  document.getElementById("score-table").style.display = "flex";
-}
-
-function hideScoreTable() {
-  document.getElementById("score-table").style.display = "none";
-}
-
-function playSong() {
-  const token = localStorage.getItem("spotify_access_token");
-  if (!token) return alert("Bitte zuerst mit Spotify verbinden.");
-  const playlists = [
-    "37i9dQZF1DX4TiN7pMwV0Z",
-    "37i9dQZF1DWXRqgorJj26U",
-    "37i9dQZF1DX4o1oenSJRJd",
-    "37i9dQZF1DX4UtSsGT1Sbe"
-  ];
-  const selected = playlists[Math.floor(Math.random() * playlists.length)];
-  console.log("Zufällige Playlist:", selected);
-
-  fetch(`https://api.spotify.com/v1/playlists/${selected}/tracks`, {
-    headers: { Authorization: `Bearer ${token}` }
-  })
-    .then(res => res.json())
-    .then(data => {
-      const tracks = data.items.filter(i => i.track && i.track.uri);
-      if (tracks.length === 0) return console.warn("Keine gültigen Tracks gefunden");
-      const chosen = tracks[Math.floor(Math.random() * tracks.length)].track.uri;
-      console.log("Wähle Track:", chosen);
-      return fetch("https://api.spotify.com/v1/me/player/devices", {
-        headers: { Authorization: `Bearer ${token}` }
-      })
-        .then(r => r.json())
-        .then(devs => {
-          const active = devs.devices.find(d => d.is_active);
-          if (!active) return alert("Kein aktives Gerät gefunden. Starte Spotify auf deinem Handy oder PC.");
-          console.log("Aktives Gerät:", active.name);
-          return fetch("https://api.spotify.com/v1/me/player/play?device_id=" + active.id, {
-            method: "PUT",
-            headers: {
-              "Authorization": `Bearer ${token}`,
-              "Content-Type": "application/json"
-            },
-            body: JSON.stringify({ uris: [chosen] })
-          })
-            .then(response => {
-              if (!response.ok) {
-                console.error("Fehler beim Abspielen:", response.statusText);
-              } else {
-                console.log("Song erfolgreich gestartet ✅");
-              }
-            });
+        const res = await fetch(SERVER_URL, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(body)
         });
-    })
-    .catch(err => console.error("Fehler beim Laden der Playlist oder beim Abspielen:", err));
-};
-</script>
+
+        const data = await res.json();
+        if (data.access_token) {
+          accessToken = data.access_token;
+          localStorage.setItem("spotify_access_token", accessToken);
+          window.history.replaceState({}, document.title, "/TopTrackz");
+        }
+      }
+    }
+
+    function showTokenStatus() {
+      const el = document.getElementById("debug-token");
+      el.textContent = accessToken ? "Token: ✅" : "Token: ❌";
+    }
+
+    function goTo(id) {
+      document.querySelectorAll(".screen").forEach(s => s.classList.remove("active"));
+      document.getElementById(id).classList.add("active");
+    }
+
+    function startSingleplayer() {
+      players = ["Spieler 1"];
+      scores = [0];
+      currentPlayerIndex = 0;
+      round = 1;
+      goTo("gameScreen");
+      updateGameUI();
+    }
+
+    let players = [], scores = [], currentPlayerIndex = 0, round = 1;
+
+    function startMultiplayer() {
+      players = [];
+      scores = [];
+      for (let i = 1; i <= 5; i++) {
+        const name = document.getElementById(`p${i}`).value;
+        if (name.trim()) {
+          players.push(name.trim());
+          scores.push(0);
+        }
+      }
+      currentPlayerIndex = 0;
+      round = 1;
+      goTo("gameScreen");
+      updateGameUI();
+    }
+
+    function updateGameUI() {
+      document.getElementById("currentPlayer").textContent = `Dran: ${players[currentPlayerIndex]}`;
+      document.getElementById("currentScore").textContent = `Punkte: ${scores[currentPlayerIndex]}`;
+      document.getElementById("roundCounter").textContent = `Runde ${round}`;
+    }
+
+    function guess(correct) {
+      if (correct) scores[currentPlayerIndex]++;
+      currentPlayerIndex++;
+      if (currentPlayerIndex >= players.length) {
+        currentPlayerIndex = 0;
+        round++;
+      }
+      updateGameUI();
+    }
+
+    async function playRandomSong() {
+      if (!accessToken) return alert("Nicht mit Spotify verbunden!");
+
+      const playlistIds = [
+        "37i9dQZF1DX4TiN7pMwV0Z",
+        "37i9dQZF1DWXRqgorJj26U",
+        "37i9dQZF1DX4o1oenSJRJd",
+        "37i9dQZF1DX4UtSsGT1Sbe"
+      ];
+      const playlist = playlistIds[Math.floor(Math.random() * playlistIds.length)];
+
+      const tracksRes = await fetch(`https://api.spotify.com/v1/playlists/${playlist}/tracks`, {
+        headers: { Authorization: `Bearer ${accessToken}` }
+      });
+      const tracksData = await tracksRes.json();
+      const items = tracksData.items.filter(item => item.track);
+      const randomTrack = items[Math.floor(Math.random() * items.length)].track.uri;
+
+      await fetch("https://api.spotify.com/v1/me/player/play", {
+        method: "PUT",
+        headers: {
+          Authorization: `Bearer ${accessToken}`,
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({ uris: [randomTrack] })
+      });
+    }
+
+    window.onload = async function () {
+      await handleRedirect();
+      showTokenStatus();
+    };
+  </script>
 </body>
 </html>
