--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       background: #2c2c2c; color: white;
       text-align: center;
     }
-    #debug-token { position: absolute; top: 10px; right: 10px; font-size: 0.75rem; color: #bbb; text-align: right; }
+    #debug-token { position: absolute; top: 10px; right: 10px; font-size: 0.75rem; color: #bbb; text-align: right; white-space: pre-line; }
     #spotify-login {
       position: fixed;
       bottom: 20px;
@@ -114,6 +114,9 @@
       const codeChallenge = await generateCodeChallenge(codeVerifier);
       const state = Math.random().toString(36).substring(2, 15);
 
+      const debug = document.getElementById("debug-token");
+      debug.textContent = `Verifier: ${codeVerifier}\nChallenge: ${codeChallenge}`;
+
       const args = new URLSearchParams({
         response_type: "code",
         client_id: CLIENT_ID,
@@ -155,7 +158,7 @@
 
     function showTokenStatus() {
       const el = document.getElementById("debug-token");
-      el.textContent = accessToken ? "Token: ✅" : "Token: ❌";
+      el.textContent += `\nToken: ${accessToken ? "✅" : "❌"}`;
     }
 
     function goTo(id) {
